@@ -7,17 +7,41 @@ echo
 echo  Hit Enter to continue....
 read
 
+echo "Select the size of your templates:"
+OPT="large small EXIT"
+select opt in $OPT; do
+ 	 	if [ "$opt" = "EXIT" ]; then
+			exit
+  		fi
+
+ 	 	if [ "$opt" = "large" ]; then
+			SUFF=""	
+			IDLOOP="11111111"
+			ID="22222222"
+			break
+  		fi
+
+ 	 	if [ "$opt" = "small" ]; then
+			SUFF="-small"
+			IDLOOP="1111111F"
+			ID="2222222F"
+			break
+  		fi
+		exit
+done
+
+
 copyfiles() {
 
 for s in $SRC; do
 	for d in $DST; do
             if [ $s = $d ]; then
 		#echo Source == Dest: I use the self template
-		cp loop.entropy "$DIR$s $d 11111111.entropy"
+		cp loop$SUFF.entropy "$DIR$s $d $IDLOOP.entropy"
 	    else
 		#echo Source <> Dest: I use the normal templates
-		cp template.entropy "$DIR$s $d 22222222.entropy"
-		cp template-rev.entropy "$DIR$d $s 22222222.entropy"
+		cp template$SUFF.entropy "$DIR$s $d $ID.entropy"
+		cp template-rev$SUFF.entropy "$DIR$d $s $ID.entropy"
             fi
 	#echo $s $d
 	done
@@ -28,6 +52,7 @@ done
 DIR="$HOME/.paranoia/"
 
 mkdir $DIR
+rm $DIR/*
 
 
 SRC="simon.wenner@gmail.com alexapfel@gmail.com alexapfel@swissjabber.ch nowic@swissjabber.ch"
