@@ -24,6 +24,7 @@ Christan Wäckerlin:
  * Libotp: Keyfile templates added
  * Libotp: Full keyfile support
  * Added support for the ./configure --disable-otp swich that disables libotp support for development.
+ * Added support for protected entropy signaling (i.e. no entropy  signal)
  
 
 
